package SOLID.users;

public class User {
    protected String name;

    public User(String name) {
        this.name = name;
    }

    public String getName() {
        return this.name;
    }
}
